test/Harper/Tests/Bad/EndOfBodyReachableInNonUnitReturningFunction.har
f :: Integer -> Integer;
f n = {
  if n <= 17 {
    return 42;
  }
};

main :: Integer;
main = (f 17) + (f 18);